--- a/templates/producto/index.html.twig
+++ b/templates/producto/index.html.twig
@@ -8,9 +8,11 @@
 {% endblock %} #}
 
 
-
 {% block body %}
 
+	{# {% for message in app.flashes('exito') %}
+										<div class="alert alert-"
+									{% endfor %} #}
 	<br>
 	<div class="container">
 		<h2>Lista de productos</h2>
@@ -22,6 +24,7 @@
 					<td>Nombre</td>
 					<td>Descripcion</td>
 					<td>Precio</td>
+					<td></td>
 				</tr>
 			</thead>
 			<tbody>
@@ -30,10 +33,44 @@
 						<td>{{producto.id}}</td>
 						<td>{{producto.nombre}}</td>
 						<td>{{producto.descripcion}}</td>
-						<td>{{producto.precio}}€</td>
+						<td>{{producto.precio}}
+							€</td>
+						{# <td><a href="{{ path ('producto.borrar', {id: producto.id}) }}"><button type="button" class="btn btn-danger">Borrar</button></a></td> #}
+						<td>
+							<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirmDeleteModal-{{producto.id}}">Borrar</button>
+
+							<div class="modal fade" id="confirmDeleteModal-{{producto.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+								<div class="modal-dialog" role="document">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+												<span aria-hidden="true">&times;</span>
+											</button>
+										</div>
+										<div class="modal-body">
+											¿Seguro que quieres borrar el producto?
+										</div>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+											<a href="{{ path ('producto.borrar', {id: producto.id}) }}">
+												<button type="button" class="btn btn-danger">Borrar</button>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</td>
 					</tr>
 				{% endfor %}
 			</tbody>
 		</table>
+		<a href="{{ path ('producto.crear')}}">
+			<button type="button" class="btn btn-primary">Añadir</button>
+		</a>
 	</div>
+
 {% endblock %}
+
+
+{# En el boton de borrar, hay una forma fácil de pasar la id por el path #}
