--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,8 +1,20 @@
+
+
 .navbar { 
-    background-color: black;
+    background-color: black!important;
     height: auto;
 }
 
-.bg-box {
+ /* .bg-box {
     position: relative;
+}  */
+
+/* .tituloJuegoCatalogo {
+    text-align: center;
+    color: darkturquoise;
 }
+
+.footer_section { 
+    position: fixed;
+    bottom: 0;
+} */
