--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,15 +40,17 @@
 		<link
 		href="{{asset('css/responsive.css')}}" rel="stylesheet"/>
 		{# ARREGLO #}
-		<link rel="stylesheet" type="text/css" href="{{asset('css/custom.css')}}"/> {% block stylesheets %}{% endblock %}
+		<link href="{{ asset('css/custom.css') }}" type="text/css" rel="stylesheet" />
+		{% block stylesheets %}{% endblock %}
 		</head>
 
 		<body>
 
 			<div class="hero_area">
-				<div class="bg-box">{# ARREGLO #}
-					{# <img src="{{asset('images/hero-bg.jpg')}}" alt=""> #}
-				</div>
+				
+				{# <div class="bg-box">
+					<img src="{{asset('images/portada4.jpg')}}" alt="">
+				</div> #}
 				<!-- header section strats -->
 				<header class="header_section">
 					<div class="container">
@@ -70,6 +72,9 @@
 											<span class="sr-only">(current)</span>
 										</a>
 									</li>
+									<li class="nav-item">
+										<a class="nav-link" href="{{path('app_catalogo')}}">Catálogo</a>
+									</li>
 									{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 									<li class="nav-item">
 										<a class="nav-link" href="{{path('producto.editar')}}">Productos</a>
@@ -78,10 +83,6 @@
 										<a class="nav-link" href="{{path('producto.crear')}}">Formulario</a>
 									</li>
 									{% endif %}
-									<li class="nav-item">
-										<a class="nav-link" href="{{asset('about.html')}}">Empleados</a>
-									</li>
-
 								</ul>
 								<div class="user_option">
 									<a href="{{path('app_login')}}" class="user_link">
