--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -88,7 +88,7 @@
 									<a href="{{path('app_login')}}" class="user_link">
 										<i class="fa fa-user" aria-hidden="true"></i>
 									</a>
-									<a class="cart_link" href="#">
+									<a class="cart_link" href="{{path('app_pedido')}}">
 										<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
 											<g>
 												<g>
