--- a/templates/pedido/index.html.twig
+++ b/templates/pedido/index.html.twig
@@ -1,9 +1,71 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PedidoController!{% endblock %}
+{% block title %}Pedidos
+{% endblock %}
 
 {% block body %}
 
+	{# Esta variable es para calcular el total de los precios añadidos al carrito #}
+	{% set total = 0 %}
 
+	<br>
+	<div class="container">
+		<h2>Carrito</h2>
+		<br>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<td>Pedido</td>
+					<td>Cliente</td>
+					<td>Nombre</td>
+					<td>Precio</td>
+					<td>Estado</td>
+					<td></td>
+				</tr>
+			</thead>
+			<tbody>
+				{% for pedido in pedidos %}
+					{% set total = total + pedido.precio %}
+					<tr>
+						<td>{{pedido.pedido}}</td>
+						<td>{{pedido.usuario}}</td>
+						<td>{{pedido.nombre}}</td>
+						<td>{{pedido.precio}}</td>
+						<td>
+                        {% if pedido.estado == "Enviado" %}
+                            <button type="button" class="btn btn-success">{{pedido.estado}}</button>
+                        {% endif %}
+                        {% if pedido.estado == "En proceso" %}
+                            <button type="button" class="btn btn-warning">{{pedido.estado}}</button>
+                        {% endif %}
+                        {% if pedido.estado == "No procesado" %}
+                            <button type="button" class="btn btn-secondary">{{pedido.estado}}</button>
+                        {% endif %}
+                        </td>
+						<td>
+							<div class="dropdown show">
+								<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									{{pedido.estado}}
+								</a>
+
+								<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+									<a class="dropdown-item" href="{{path('app_estado', {id: pedido.id, estado: 'No procesado'})}}">No procesado</a>
+									<a class="dropdown-item" href="{{path('app_estado', {id: pedido.id, estado: 'En proceso'})}}">En proceso</a>
+									<a class="dropdown-item" href="{{path('app_estado', {id: pedido.id, estado: 'Enviado'})}}">Enviado</a>
+								</div>
+							</div>
+						</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<div class="d-flex flex-row justify-content-end p-1">
+			<div class="alert alert-info" role="alert">
+				Total:
+				<a href="#" class="alert-link">{{total}}€</a>
+			</div>
+		</div>
+	</div>
+	<br>
 
 {% endblock %}
