--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -127,11 +127,12 @@
 											<g></g>
 										</svg>
 									</a>
-									<form class="form-inline">
-										<button class="btn  my-2 my-sm-0 glyphicon glyphicon-off nav_search-btn" type="submit">
-											<i class="fa fa-search" aria-hidden="true"></i>
+										<a href="{{path('app_registro')}}">
+										<button class="btn  my-2 my-sm-0 glyphicon glyphicon-off nav_search-btn">
+											
+												<i class="fa fa-search" aria-hidden="true"></i>
 										</button>
-									</form>
+										</a>
 									{# <a href="{{path('app_registro')}}" class="order_online">
 																			Registrarse
 																		</a> #}
