--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,9 +48,9 @@
 
 			<div class="hero_area">
 				
-				{# <div class="bg-box">
+				<div class="bg-box" style="z-index: -1;">
 					<img src="{{asset('images/portada4.jpg')}}" alt="">
-				</div> #}
+				</div>
 				<!-- header section strats -->
 				<header class="header_section">
 					<div class="container">
