--- a/templates/producto/index.html.twig
+++ b/templates/producto/index.html.twig
@@ -3,10 +3,11 @@
 {% block title %}Productos
 {% endblock %}
 
-{# {% block stylesheets %}
- 		{{ parent() }}
-        <link href="{{ asset('css/custom.css') }}" type="text/css" rel="stylesheet" />
-{% endblock %} #}
+
+{% block stylesheets %}
+<link href="{{ asset('css/customimg.css') }}" type="text/css" rel="stylesheet" />
+<link href="{{ asset('css/footer.css') }}" type="text/css" rel="stylesheet" />
+{% endblock %}
 
 
 {% block body %}
