--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Logeate!
 {% endblock %}
 
+{% block stylesheets %}
+<link href="{{ asset('css/customimg.css') }}" type="text/css" rel="stylesheet" />
+<link href="{{ asset('css/footerlogin.css') }}" type="text/css" rel="stylesheet" />
+{% endblock %}
+
 {% block body %}
 	<div class="container">
 		<form method="post">
