--- a/templates/producto/crear.html.twig
+++ b/templates/producto/crear.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Formulario
 {% endblock %}
 
+{% block stylesheets %}
+<link href="{{ asset('css/customimg.css') }}" type="text/css" rel="stylesheet" />
+<link href="{{ asset('css/footer.css') }}" type="text/css" rel="stylesheet" />
+{% endblock %}
+
 {% block body %}
 
 	<br>
