--- a/templates/registro/index.html.twig
+++ b/templates/registro/index.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Registro{% endblock %}
 
+{% block stylesheets %}
+<link href="{{ asset('css/customimg.css') }}" type="text/css" rel="stylesheet" />
+<link href="{{ asset('css/footer.css') }}" type="text/css" rel="stylesheet" />
+{% endblock %}
+
 {% block body %}
 
 <div class="container">
