--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -75,7 +75,7 @@
 									<li class="nav-item">
 										<a class="nav-link" href="{{path('app_catalogo')}}">Catálogo</a>
 									</li>
-									{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+									{% if is_granted('ROLE_ADMIN') %}
 									<li class="nav-item">
 										<a class="nav-link" href="{{path('producto.editar')}}">Productos</a>
 									</li>
@@ -175,25 +175,25 @@
 							<div class="col-md-4 footer-col">
 								<div class="footer_contact">
 									<h4>
-										Contact Us
+										Contáctanos
 									</h4>
 									<div class="contact_link_box">
 										<a href="">
 											<i class="fa fa-map-marker" aria-hidden="true"></i>
 											<span>
-												Location
+												Localización
 											</span>
 										</a>
 										<a href="">
 											<i class="fa fa-phone" aria-hidden="true"></i>
 											<span>
-												Call +01 1234567890
+												Call +34 637287874
 											</span>
 										</a>
 										<a href="">
 											<i class="fa fa-envelope" aria-hidden="true"></i>
 											<span>
-												demo@gmail.com
+												aranda.formal@gmail.com
 											</span>
 										</a>
 									</div>
@@ -228,10 +228,10 @@
 							</div>
 							<div class="col-md-4 footer-col">
 								<h4>
-									Opening Hours
+									Horario
 								</h4>
 								<p>
-									Everyday
+									Todos los días
 								</p>
 								<p>
 									10.00 Am -10.00 Pm
@@ -276,22 +276,3 @@
 		</body>
 	</html>
 
-	{# <!DOCTYPE html>
-			<html>
-				<head>
-					<meta charset="UTF-8">
-					<title>
-						{% block title %}Welcome!
-						{% endblock %}
-					</title>
-					<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-					<link
-					rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-					{% block stylesheets %}{% endblock %}
-					{% block javascripts %}{% endblock %}
-				</head>
-				<body>
-					<div class="container"> {% block body %}{% endblock %}
-						</div>
-					</body>
-				</html> #}
