--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -342,7 +342,7 @@
     <div class="container">
       <div class="heading_container heading_center psudo_white_primary mb_45">
         <h2>
-          What Says Our Customers
+          Qué es lo que opinan nuestros clientes
         </h2>
       </div>
       <div class="carousel-wrap row ">
