--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -46,7 +46,7 @@
 			    #}
 			<br>
 			<button class="btn btn-lg btn-primary" type="submit">
-				Sign in
+				Logueate!
 			</button>
 		</form>
 	</div>
