--- a/templates/catalogo/index.html.twig
+++ b/templates/catalogo/index.html.twig
@@ -20,8 +20,7 @@
 				</div>
 			{% endfor %}
 			<div class="heading_container heading_center">
-			<br><br>
-				<h2>
+				<h2 class="mt-5">
 					Catálogo
 				</h2>
 			</div>
@@ -113,7 +112,7 @@
 			</div>
 			<div class="btn-box">
 				<a href="">
-					View More
+					Ver más
 				</a>
 			</div>
 		</div>
