--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -23,7 +23,7 @@
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
-                        Order Now
+                        Más Info
                       </a>
                     </div>
                   </div>
@@ -44,7 +44,7 @@
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
-                        Order Now
+                        Más Info
                       </a>
                     </div>
                   </div>
@@ -65,7 +65,7 @@
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
-                        Order Now
+                        Más Info
                       </a>
                     </div>
                   </div>
@@ -265,7 +265,7 @@
               the middle of text. All
             </p>
             <a href="">
-              Read More
+              Leer más
             </a>
           </div>
         </div>
