--- a/templates/pedido/index.html.twig
+++ b/templates/pedido/index.html.twig
@@ -13,12 +13,9 @@
 	{# Esta variable es para calcular el total de los precios añadidos al carrito #}
 	{% set total = 0 %}
 
-	<br>
-	<br>
-	<br>
+	
 	<div class="container">
-		<h2>Carrito</h2>
-		<br>
+		<h2 class="mt-5">Carrito</h2>
 		<table class="table table-striped">
 			<thead>
 				<tr>
