--- a/templates/producto/mostrar.html.twig
+++ b/templates/producto/mostrar.html.twig
@@ -5,7 +5,7 @@
 
 {% block stylesheets %}
 <link href="{{ asset('css/customimg.css') }}" type="text/css" rel="stylesheet" />
-
+<link href="{{ asset('css/footer.css') }}" type="text/css" rel="stylesheet" />
 {% endblock %}
 
 {% block body %}
