--- a/templates/registro/index.html.twig
+++ b/templates/registro/index.html.twig
@@ -10,7 +10,7 @@
 {% block body %}
 
 <div class="container">
-    <h2>Registro</h2>
+    <h2 class="mt-5">Registro</h2>
     <br>
     {{form(registroForm)}}
 </div>
