--- a/templates/producto/crear.html.twig
+++ b/templates/producto/crear.html.twig
@@ -10,8 +10,7 @@
 
 {% block body %}
 
-	<br>
-	<div class="container">
+	<div class="container class="mt-5"">
 		{{form(crearForm)}}
 	</div>
 {% endblock %}
