--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -299,7 +299,7 @@
               <div>
                 <select class="form-control nice-select wide">
                   <option value="" disabled selected>
-                    How many persons?
+                    Cuántas personas?
                   </option>
                   <option value="">
                     2
@@ -320,7 +320,7 @@
               </div>
               <div class="btn_box">
                 <button>
-                  Book Now
+                  Escribe ahora
                 </button>
               </div>
             </form>
