--- a/templates/producto/crear.html.twig
+++ b/templates/producto/crear.html.twig
@@ -10,7 +10,10 @@
 
 {% block body %}
 
-	<div class="container class="mt-5"">
+	<div class="container">
+
+		<h2 class="mt-5">Registro Productos</h2>
+		<br>
 		{{form(crearForm)}}
 	</div>
 {% endblock %}
